[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Objects/RescueReploid.gd" type="Script" id=1]
[ext_resource path="res://src/Objects/Pickups/heart.tres" type="SpriteFrames" id=2]
[ext_resource path="res://src/Sounds/14 - MMX - X Sub Tank-Heart Powerup.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="RescueReploid" type="Area2D"]
z_index = 10
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.5, 1, 0.5, 1 )
frames = ExtResource( 2 )
playing = true

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 1 )

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource( 1 )

[node name="RescueSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -4.554
max_distance = 600.0
bus = "SFX"

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
